# LHL-Legacy

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  LVM.licenseheader  README.md  appveyor.yml  install-cmake.sh  linux-ci-clang.sh
Catch/: catch.hpp
Document/: Architecture.md  Overview.md  TypeSystem.md
Document/LML/: Architecture.md  TypeSystem.md
Document/LVM/: Command.md  DataType.md  InstructionSetOverview.md  Memory.md
Document/Lang/: QuickStart.md
LML/: .gitignore  CMakeLists.txt  README.md
LML/Include/LML/: TypeSystem.h  stdafx.h
LML/Include/LML/Lexical/: Automata.h  LexicalError.h  Regex.h
LML/Source/: Automata.cpp  LexicalError.cpp  Regex.cpp  TypeSystem.cpp  main.cpp  stdafx.cpp
LML/Tests/: Tests.cpp
LVM/: .gitignore  CMakeLists.txt  copy_libraries.py
LVM/Include/: Command.h  Commands.hpp
LVM/Include/LVM/: Command.h  Commands.hpp  DLL.h  LVMSDK.h  Memory.h  NativeLibraryManager.h  VirtualMachine.h  stdafx.h
LVM/Source/: Command.cpp  DLL.cpp  Memory.cpp  NativeLibraryManager.cpp  VirtualMachine.cpp  main.cpp  stdafx.cpp
LVM/TestLib/: CMakeLists.txt  testlib.cpp
LVM/Tests/: Tests.cpp
TestData/: apb.lvm  apb2.lvm  test.lvm
ci-script/: darwin-clang.sh  darwin-gcc.sh  install-cmake.sh  linux-clang.sh  linux-gcc.sh
